--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ h1 {
 }
 
 .grid__col {
+  display: flex;
   width: 100%;
   padding-right: 10px;
   padding-left: 10px;
@@ -62,60 +63,71 @@ h1 {
 
 /* grid fyrir cards */
 
-h2 {
-  margin-bottom: 10px;
-  font-size: 1.5em;
-  height: 25px;
-}
-
-.cards div:first-of-type {
-  display: flex;
-  flex-flow: row wrap;
-  height: 90%;
-}
-
 .cards {
   display: flex;
-  flex-flow: row wrap;
+  flex-wrap: row wrap;
   justify-content: space-around;
+
   background: #eee;
-  overflow: hidden;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  max-width: 470px;
-  max-height: 300px;
+
   margin-bottom: 10px;
   padding: 10px;
-  background: #fff;
+  width: 100%;
+  max-width: 470px;
+  max-height: 300px;
+  overflow: hidden;
+
+  background-color: #fff;
   border: 2px solid #aaa;
   border-radius: 5px;
-  overflow: auto;
 }
 
-.card div div:first-of-type {
-  display: initial;
-  max-height: 240px;
-  margin-top: 20px;
-  overflow: auto;
+.card__title {
+  margin-bottom: 20px;
+
+  font-size: 1.375em;
+  line-height: 1;
+  word-break: break-word;
 }
 
-ul {
+.card__content {
   display: flex;
-  flex-flow: row wrap;
-  list-style-type: none;
+  flex: 1;
+}
+
+.card__text {
+  font-size: 1em;
+  line-height: 1.375em;
+  overflow: auto;
+  word-break: break-word;
+}
+
+.card__image {
+  padding-left: 20px;
+  flex: 0 0 150px;
+}
+
+.card__img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card__tags {
+  margin-top: 10px;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  list-style: none;
+}
+
+.card__tag {
   font-weight: bold;
-  align-items: end;
-  margin: 10px 0;
-}
-
-ul li {
-  margin: 0 3px;
-}
-
-.card img {
-  width: 150px;
-  padding: 10px;
+  margin-right: 10px;
 }
