--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,6 @@ html {
 main {
   margin: 0 auto;
   max-width: 1450px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 /* TODO taka ætti padding af main þegar komið er fyrir ofan hámarksbreidd */
@@ -42,6 +40,11 @@ h1 {
 }
 
 /* grid fyrir efni, setja þarf upp í html */
+.grid {
+  max-width: 1450px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
 .grid__row {
   display: flex;
@@ -51,10 +54,19 @@ h1 {
 }
 
 .grid__col {
-  display: flex;
   width: 100%;
   padding-right: 10px;
   padding-left: 10px;
+}
+
+.col-12 {
+  width: 100%;
+}
+.col-6 {
+  width: 100%;
+}
+.col-3 {
+  width: 25%;
 }
 
 /* TODO setja upp grid fyrir >= 1000px */
@@ -63,28 +75,35 @@ h1 {
 
 /* grid fyrir cards */
 
+.card__row {
+  display: flex;
+  flex-direction: column;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
+.card__col {
+  display: flex;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
 .cards {
   display: flex;
-  flex-wrap: row wrap;
-  justify-content: space-around;
-
-  background: #eee;
+  align-content: center;
+  margin-left: 20px;
 }
 
 .card {
   display: flex;
   flex-direction: column;
 
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   width: 100%;
-  max-width: 470px;
-  max-height: 300px;
   overflow: hidden;
 
-  background-color: #fff;
-  border: 2px solid #aaa;
-  border-radius: 5px;
+  border-bottom: 2px solid #aaa;
 }
 
 .card__title {
@@ -97,6 +116,7 @@ h1 {
 
 .card__content {
   display: flex;
+  flex-direction: column;
   flex: 1;
 }
 
@@ -108,7 +128,6 @@ h1 {
 }
 
 .card__image {
-  padding-left: 20px;
   flex: 0 0 150px;
 }
 
@@ -130,4 +149,51 @@ h1 {
 .card__tag {
   font-weight: bold;
   margin-right: 10px;
+}
+
+.reverse {
+  flex-flow: column-reverse;
+}
+
+@media (min-width: 501px) {
+
+.card__row {
+  flex-flow: row wrap;
+  align-items: stretch;
+}
+
+.card {
+  flex: 1;
+
+  width: 45vw;
+  min-width: 350px;
+  max-width: 470px;
+  max-height: 300px;
+
+  border: 2px solid #aaa;
+  border-radius: 5px;
+}
+
+.card__content {
+  flex-direction: row;
+  flex: 1;
+}
+
+
+}
+
+@media (min-width: 1001px) {
+
+.grid__row {
+  flex-direction: row;
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.card {
+  width: 30vw;
+  max-width: 450px;}
+  
 }
