--- a/styles.css
+++ b/styles.css
@@ -69,12 +69,7 @@ h1 {
   width: 25%;
 }
 
-/* TODO setja upp grid fyrir >= 1000px */
-
-/* TODO koma mynd fyrir á öðrum stað í < 1000px */
-
 /* grid fyrir cards */
-
 .card__row {
   display: flex;
   flex-direction: column;
@@ -91,7 +86,6 @@ h1 {
 .cards {
   display: flex;
   align-content: center;
-  margin-left: 20px;
 }
 
 .card {
@@ -155,20 +149,22 @@ h1 {
   flex-flow: column-reverse;
 }
 
-@media (min-width: 501px) {
+@media (min-width: 700px) {
 
 .card__row {
   flex-flow: row wrap;
-  align-items: stretch;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.card__col {
+  width: 50%;
 }
 
 .card {
   flex: 1;
 
-  width: 45vw;
-  min-width: 350px;
-  max-width: 470px;
-  max-height: 300px;
+  max-height: 300px;  
 
   border: 2px solid #aaa;
   border-radius: 5px;
@@ -176,13 +172,11 @@ h1 {
 
 .card__content {
   flex-direction: row;
-  flex: 1;
 }
 
-
 }
 
-@media (min-width: 1001px) {
+@media (min-width: 1000px) {
 
 .grid__row {
   flex-direction: row;
@@ -192,8 +186,23 @@ h1 {
   width: 50%;
 }
 
-.card {
-  width: 30vw;
-  max-width: 450px;}
+.card__col {
+  width: 33.333333%;
+}
   
 }
+
+@media (min-width: 1490px) {
+
+.card__row {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.grid {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+}
+  
